# tf-python

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: autogen_chat.py  crewai_crew.py  demo_dashboard.py  langchain_agent.py  openai_assistant.py
src/thunderfire/: __init__.py  client.com.yaml  client.py  types.com.yaml  types.py
src/thunderfire/autogen/: __init__.py  tools.com.yaml  tools.py
src/thunderfire/crewai/: __init__.py  tools.py
src/thunderfire/langchain/: __init__.py  toolkit.com.yaml  toolkit.py
src/thunderfire/llm/: __init__.py  anthropic_provider.com.yaml  anthropic_provider.py  base.com.yaml  base.py  local_provider.com.yaml  local_provider.py  openai_provider.com.yaml  openai_provider.py  registry.com.yaml  registry.py
src/thunderfire/mcp/: __init__.py  server.com.yaml  server.py
src/thunderfire/openai/: __init__.py  functions.com.yaml  functions.py
tests/: conftest.py  test_autogen.py  test_client.py  test_crewai.py  test_langchain.py  test_openai.py
